--- a/source/index.html
+++ b/source/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link href="./css/style.css" rel="stylesheet">
+  <title>Arexim</title>
+  <link href="css/style.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"/>
 </head>
 <body class="index">
@@ -53,7 +53,7 @@
           </a>
         </div>
       </div>
-      <img src="./icons/picture.svg" class="header__right__img" alt="запчасти">
+      <img src="icons/picture.svg" class="header__right__img" alt="запчасти">
     </div>
   </div>
 </header>
@@ -123,7 +123,7 @@
 
     <div class="border">
       <span class="border__item"></span>
-      <img class="border__img" src="./icons/union.svg" alt="">
+      <img class="border__img" src="icons/union.svg" alt="">
       <span class="border__item"></span>
     </div>
 
@@ -216,7 +216,7 @@
     </div>
     <div class="border">
       <span class="border__item"></span>
-      <img class="border__img" src="./icons/union.svg" alt="">
+      <img class="border__img" src="icons/union.svg" alt="">
       <span class="border__item"></span>
     </div>
   </section>
@@ -317,5 +317,4 @@
 <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
 <script src="js/index.js"></script>
 </body>
-
 </html>
