--- a/source/index.html
+++ b/source/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Arexim</title>
-  <link href="css/style.css" rel="stylesheet">
+  <link href="./css/style.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"/>
 </head>
 <body class="index">
@@ -22,7 +22,7 @@
     </div>
     <div class="header__right">
       <div class="header__right-block">
-        <a href="" class="address">
+        <a href="#" class="address">
              <span class="address__item">
                <svg class="address__img" width="24" height="24" viewBox="0 0 24 24" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
@@ -53,7 +53,7 @@
           </a>
         </div>
       </div>
-      <img src="icons/picture.svg" class="header__right__img" alt="запчасти">
+      <img src="./icons/picture.svg" class="header__right__img" alt="запчасти">
     </div>
   </div>
 </header>
@@ -123,7 +123,7 @@
 
     <div class="border">
       <span class="border__item"></span>
-      <img class="border__img" src="icons/union.svg" alt="">
+      <img class="border__img" src="./icons/union.svg" alt="бордер">
       <span class="border__item"></span>
     </div>
 
