--- a/source/index.html
+++ b/source/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"/>
 </head>
 <body class="index">
-<header >
+<header>
   <div class="header">
     <div class="header__leaft">
       <div class="header__logo">
@@ -17,13 +17,14 @@
       </div>
       <div class="preview">
         <h2 class="preview__text__title">Группа компаний Arexim</h2>
-        <h2 class="preview__text">Дистрибьютор автомобильных запасных частей и расходных материалов на рынке Армении.</h2>
+        <h2 class="preview__text">Дистрибьютор автомобильных запасных частей и расходных материалов на рынке
+          Армении.</h2>
       </div>
     </div>
     <div class="header__right">
       <div class="header__right-block">
         <a href="#" class="address">
-             <span class="address__item">
+            <span class="address__item">
                <svg class="address__img" width="24" height="24" viewBox="0 0 24 24" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
                       <path
@@ -32,7 +33,7 @@
                       <path d="M9.25 11.5L10.75 13L14.75 9" stroke="#1B202D" stroke-width="2" stroke-linecap="round"
                             stroke-linejoin="round"/>
                </svg>
-             </span>
+          </span>
           ул. Авагян, 21, Ереван
         </a>
         <div class="info__contact__top">
@@ -285,9 +286,9 @@
         <span style="vertical-align: middle; margin-right: 11px; margin-left: 2px">
           <svg class="info__img" width="24" height="24" style="margin-top: 4px" viewBox="0 0 24 24" fill="none"
                xmlns="http://www.w3.org/2000/svg">
-  <path
-    d="M3.61971 8.49C5.58971 -0.169998 18.4197 -0.159997 20.3797 8.5C21.5297 13.58 18.3697 17.88 15.5997 20.54C13.5897 22.48 10.4097 22.48 8.38971 20.54C5.62971 17.88 2.46971 13.57 3.61971 8.49Z"
-    stroke="#1B202D" stroke-width="2"/>
+        <path
+          d="M3.61971 8.49C5.58971 -0.169998 18.4197 -0.159997 20.3797 8.5C21.5297 13.58 18.3697 17.88 15.5997 20.54C13.5897 22.48 10.4097 22.48 8.38971 20.54C5.62971 17.88 2.46971 13.57 3.61971 8.49Z"
+          stroke="#1B202D" stroke-width="2"/>
 <path d="M9.25 11.5L10.75 13L14.75 9" stroke="#1B202D" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
 </svg>
         </span>
