--- a/source/index.html
+++ b/source/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="ru">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,10 +9,12 @@
 </head>
 <body class="index">
 <header>
+  <meta name='viewport' content='width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0'>
+
   <div class="header">
     <div class="header__leaft">
       <div class="header__logo">
-          <img src="icons/arexim.svg" alt="Логотип">
+        <img src="icons/arexim.svg" class="header__logo__img" alt="Логотип">
       </div>
       <div class="preview">
         <h2 class="preview__text__title">Группа компаний Arexim</h2>
@@ -26,11 +27,12 @@
         <a href="#" class="address">
             <span class="address__item">
               <svg class="address__img" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                    xmlns="http://www.w3.org/2000/svg">
+                   xmlns="http://www.w3.org/2000/svg">
                       <path
                         d="M3.61971 8.49C5.58971 -0.169998 18.4197 -0.159997 20.3797 8.5C21.5297 13.58 18.3697 17.88 15.5997 20.54C13.5897 22.48 10.4097 22.48 8.38971 20.54C5.62971 17.88 2.46971 13.57 3.61971 8.49Z"
                         stroke="#1B202D" stroke-width="2"/>
-                      <path d="M9.25 11.5L10.75 13L14.75 9" stroke="#1B202D" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                      <path d="M9.25 11.5L10.75 13L14.75 9" stroke="#1B202D" stroke-width="2" stroke-linecap="round"
+                            stroke-linejoin="round"/>
               </svg>
           </span>
           ул. Авагян, 21, Ереван
@@ -38,17 +40,22 @@
         <div class="info__contact__top">
           <a href="tel:+37441800786" class="info__text info__text--top">
         <span style="vertical-align: middle; margin-right: 8px;">
-          <svg style="margin-top: -7px;" class="info__img" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M21.97 18.33C21.97 18.69 21.89 19.06 21.72 19.42C21.55 19.78 21.33 20.12 21.04 20.44C20.55 20.98 20.01 21.37 19.4 21.62C18.8 21.87 18.15 22 17.45 22C16.43 22 15.34 21.76 14.19 21.27C13.04 20.78 11.89 20.12 10.75 19.29C9.6 18.45 8.51 17.52 7.47 16.49C6.44 15.45 5.51 14.36 4.68 13.22C3.86 12.08 3.2 10.94 2.72 9.81C2.24 8.67 2 7.58 2 6.54C2 5.86 2.12 5.21 2.36 4.61C2.6 4 2.98 3.44 3.51 2.94C4.15 2.31 4.85 2 5.59 2C5.87 2 6.15 2.06 6.4 2.18C6.66 2.3 6.89 2.48 7.07 2.74L9.39 6.01C9.57 6.26 9.7 6.49 9.79 6.71C9.88 6.92 9.93 7.13 9.93 7.32C9.93 7.56 9.86 7.8 9.72 8.03C9.59 8.26 9.4 8.5 9.16 8.74L8.4 9.53C8.29 9.64 8.24 9.77 8.24 9.93C8.24 10.01 8.25 10.08 8.27 10.16C8.3 10.24 8.33 10.3 8.35 10.36C8.53 10.69 8.84 11.12 9.28 11.64C9.73 12.16 10.21 12.69 10.73 13.22C11.27 13.75 11.79 14.24 12.32 14.69C12.84 15.13 13.27 15.43 13.61 15.61C13.66 15.63 13.72 15.66 13.79 15.69C13.87 15.72 13.95 15.73 14.04 15.73C14.21 15.73 14.34 15.67 14.45 15.56L15.21 14.81C15.46 14.56 15.7 14.37 15.93 14.25C16.16 14.11 16.39 14.04 16.64 14.04C16.83 14.04 17.03 14.08 17.25 14.17C17.47 14.26 17.7 14.39 17.95 14.56L21.26 16.91C21.52 17.09 21.7 17.3 21.81 17.55C21.91 17.8 21.97 18.05 21.97 18.33Z" stroke="white" stroke-width="2" stroke-miterlimit="10"/>
-                  <path d="M18.5 9C18.5 8.4 18.03 7.48 17.33 6.73C16.69 6.04 15.84 5.5 15 5.5" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                  <path d="M22 9C22 5.13 18.87 2 15 2" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+          <svg style="" class="info__img info__img--top" width="24" height="24" viewBox="0 0 24 24" fill="none"
+               xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M21.97 18.33C21.97 18.69 21.89 19.06 21.72 19.42C21.55 19.78 21.33 20.12 21.04 20.44C20.55 20.98 20.01 21.37 19.4 21.62C18.8 21.87 18.15 22 17.45 22C16.43 22 15.34 21.76 14.19 21.27C13.04 20.78 11.89 20.12 10.75 19.29C9.6 18.45 8.51 17.52 7.47 16.49C6.44 15.45 5.51 14.36 4.68 13.22C3.86 12.08 3.2 10.94 2.72 9.81C2.24 8.67 2 7.58 2 6.54C2 5.86 2.12 5.21 2.36 4.61C2.6 4 2.98 3.44 3.51 2.94C4.15 2.31 4.85 2 5.59 2C5.87 2 6.15 2.06 6.4 2.18C6.66 2.3 6.89 2.48 7.07 2.74L9.39 6.01C9.57 6.26 9.7 6.49 9.79 6.71C9.88 6.92 9.93 7.13 9.93 7.32C9.93 7.56 9.86 7.8 9.72 8.03C9.59 8.26 9.4 8.5 9.16 8.74L8.4 9.53C8.29 9.64 8.24 9.77 8.24 9.93C8.24 10.01 8.25 10.08 8.27 10.16C8.3 10.24 8.33 10.3 8.35 10.36C8.53 10.69 8.84 11.12 9.28 11.64C9.73 12.16 10.21 12.69 10.73 13.22C11.27 13.75 11.79 14.24 12.32 14.69C12.84 15.13 13.27 15.43 13.61 15.61C13.66 15.63 13.72 15.66 13.79 15.69C13.87 15.72 13.95 15.73 14.04 15.73C14.21 15.73 14.34 15.67 14.45 15.56L15.21 14.81C15.46 14.56 15.7 14.37 15.93 14.25C16.16 14.11 16.39 14.04 16.64 14.04C16.83 14.04 17.03 14.08 17.25 14.17C17.47 14.26 17.7 14.39 17.95 14.56L21.26 16.91C21.52 17.09 21.7 17.3 21.81 17.55C21.91 17.8 21.97 18.05 21.97 18.33Z"
+              stroke="white" stroke-width="2" stroke-miterlimit="10"/>
+                  <path d="M18.5 9C18.5 8.4 18.03 7.48 17.33 6.73C16.69 6.04 15.84 5.5 15 5.5" stroke="white"
+                        stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                  <path d="M22 9C22 5.13 18.87 2 15 2" stroke="white" stroke-width="2" stroke-linecap="round"
+                        stroke-linejoin="round"/>
           </svg>
         </span>
             + 374 41 800786
           </a>
         </div>
       </div>
-      <img src="./icons/picture.svg" class="header__right__img" alt="запчасти">
+      <img class="header__right__img" src="./icons/picture.svg" alt="запчасти">
     </div>
   </div>
 </header>
@@ -98,7 +105,7 @@
       stroke-linejoin="round"/>
 </svg>
             </span>
-          <div class="tabcontent__block" style="margin-left: 20px;  ">
+          <div class="tabcontent__block tabcontent__block--right">
             <h2 class="tabcontent__header" style="line-height: 35px;">
               Сбалансированная ценовая политика
             </h2>
@@ -264,7 +271,8 @@
         <div class="info__contact">
           <a href="tel:+37441800786" class="info__text">
         <span style="vertical-align: middle; margin-right: 7px;">
-          <svg class="info__img" width="30" height="30" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <svg class="info__img" width="30" height="30" viewBox="0 0 32 32" fill="none"
+               xmlns="http://www.w3.org/2000/svg">
 <path
   d="M25.97 22.33C25.97 22.69 25.89 23.06 25.72 23.42C25.55 23.78 25.33 24.12 25.04 24.44C24.55 24.98 24.01 25.37 23.4 25.62C22.8 25.87 22.15 26 21.45 26C20.43 26 19.34 25.76 18.19 25.27C17.04 24.78 15.89 24.12 14.75 23.29C13.6 22.45 12.51 21.52 11.47 20.49C10.44 19.45 9.51 18.36 8.68 17.22C7.86 16.08 7.2 14.94 6.72 13.81C6.24 12.67 6 11.58 6 10.54C6 9.86 6.12 9.21 6.36 8.61C6.6 8 6.98 7.44 7.51 6.94C8.15 6.31 8.85 6 9.59 6C9.87 6 10.15 6.06 10.4 6.18C10.66 6.3 10.89 6.48 11.07 6.74L13.39 10.01C13.57 10.26 13.7 10.49 13.79 10.71C13.88 10.92 13.93 11.13 13.93 11.32C13.93 11.56 13.86 11.8 13.72 12.03C13.59 12.26 13.4 12.5 13.16 12.74L12.4 13.53C12.29 13.64 12.24 13.77 12.24 13.93C12.24 14.01 12.25 14.08 12.27 14.16C12.3 14.24 12.33 14.3 12.35 14.36C12.53 14.69 12.84 15.12 13.28 15.64C13.73 16.16 14.21 16.69 14.73 17.22C15.27 17.75 15.79 18.24 16.32 18.69C16.84 19.13 17.27 19.43 17.61 19.61C17.66 19.63 17.72 19.66 17.79 19.69C17.87 19.72 17.95 19.73 18.04 19.73C18.21 19.73 18.34 19.67 18.45 19.56L19.21 18.81C19.46 18.56 19.7 18.37 19.93 18.25C20.16 18.11 20.39 18.04 20.64 18.04C20.83 18.04 21.03 18.08 21.25 18.17C21.47 18.26 21.7 18.39 21.95 18.56L25.26 20.91C25.52 21.09 25.7 21.3 25.81 21.55C25.91 21.8 25.97 22.05 25.97 22.33Z"
   stroke="#1B202D" stroke-width="2" stroke-miterlimit="10"/>
@@ -277,7 +285,8 @@
           </a>
           <a href="#" class="info__text">
         <span style="vertical-align: middle; margin-right: 11px; margin-left: 2px">
-          <svg class="info__img" width="24" height="24" style="margin-top: 4px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <svg class="info__img" width="24" height="24" style="margin-top: 4px" viewBox="0 0 24 24" fill="none"
+               xmlns="http://www.w3.org/2000/svg">
         <path
           d="M3.61971 8.49C5.58971 -0.169998 18.4197 -0.159997 20.3797 8.5C21.5297 13.58 18.3697 17.88 15.5997 20.54C13.5897 22.48 10.4097 22.48 8.38971 20.54C5.62971 17.88 2.46971 13.57 3.61971 8.49Z"
           stroke="#1B202D" stroke-width="2"/>
@@ -288,7 +297,8 @@
           </a>
           <a href="#" class="info__text">
         <span style="vertical-align: middle; margin-right: 9px;">
-          <svg class="info__img" width="30" height="30" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <svg class="info__img" width="30" height="30" viewBox="0 0 32 32" fill="none"
+               xmlns="http://www.w3.org/2000/svg">
 <path
   d="M26.4518 16.387C26.4518 22.0851 21.8273 26.7096 16.1292 26.7096C10.4312 26.7096 5.80664 22.0851 5.80664 16.387C5.80664 10.689 10.4312 6.06445 16.1292 6.06445C21.8273 6.06445 26.4518 10.689 26.4518 16.387Z"
   stroke="#1B202D" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
