--- a/source/index.html
+++ b/source/index.html
@@ -24,7 +24,7 @@
     </div>
     <div class="header__right">
       <div class="header__right-block">
-        <a href="#" class="address">
+        <a href="https://goo.gl/maps/1G7zB9zEoWDULT9E9" class="address">
             <span class="address__item">
               <svg class="address__img" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path
@@ -329,7 +329,7 @@
         </span>
             + 374 41 800786
           </a>
-          <a href="#" class="info__text">
+          <a href="https://goo.gl/maps/1G7zB9zEoWDULT9E9" class="info__text">
         <span style="vertical-align: middle; margin-right: 11px; margin-left: 2px">
           <svg class="info__img" width="24" height="24" style="margin-top: 4px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path
@@ -340,7 +340,7 @@
         </span>
             ул. Авагян, 21, Ереван
           </a>
-          <a href="#" class="info__text info__text--time">
+          <div  class="info__text info__text--time">
         <span style="vertical-align: middle;  margin-right: 9px;">
           <svg class="info__img info__img--time" width="30" height="30" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
 <path
@@ -351,7 +351,7 @@
 </svg>
         </span>
             Пн – Пт: 09:00 – 19:00
-          </a>
+          </div>
         </div>
       </div>
     </div>
